@@ -452,6 +452,8 @@ Release 0.22.0 - Unreleased
 
     HDFS-981. test-contrib fails due to test-cactus failure (cos)
 
+    HDFS-1625. Ignore disk space values in TestDataNodeMXBean.  (szetszwo)
+
 Release 0.21.1 - Unreleased
 
   IMPROVEMENTS
